--- a/index.html
+++ b/index.html
@@ -28,17 +28,18 @@
 <script>
   window.$docsify = {
     logo: 'http://bqvpn.com/img/logo.png',
-    name: 'Cisco Anyconnect 使用指南',
+    name: '币圈VPN Cisco Anyconnect 使用指南',
     repo: 'https://github.com/AnyconnectChina/Document',
     loadSidebar: true,
     subMaxLevel: 3,
-    loadNavbar: true,
+    loadNavbar: false,
     themeColor: '#2A3C5A',
     alias: {
-      '/.*/_navbar.md': '/_navbar.md',
-      '/zh/.*/_sidebar.md': '/zh/_sidebar.md',
-      '/(?!zh).*/_sidebar.md': '/_sidebar.md',
-      '/(.*)': 'https://gitcdn.xyz/cdn/cyber-republic/CyberRepublic/master/front-end/docs/$1'
+      //'^/.*/_navbar.md$': '/_navbar.md',
+      //'^/zh/.*/_sidebar.md$': '/zh/_sidebar.md',
+      //'^/(?!zh).*/_sidebar.md$': '/_sidebar.md',
+      '^/.*/_sidebar.md$': '/_sidebar.md',
+      '/(.*)': 'https://gitcdn.xyz/cdn/AnyconnectChina/Document/master/$1'
     },
     ga: 'UA-123722031-1',
     search: {
